--- a/tutorial_packet_tracer.html
+++ b/tutorial_packet_tracer.html
@@ -355,7 +355,7 @@
             </div>
             
             <div class="screenshot-placeholder">
-                📸 Screenshot: Topologia completa con cavi collegati e pallini verdi
+                <img src = "ScreenshotP2.png">
             </div>
         </div>
 
