--- a/tutorial_packet_tracer.html
+++ b/tutorial_packet_tracer.html
@@ -480,7 +480,7 @@ ping 192.168.0.20
             </ol>
             
             <div class="screenshot-placeholder">
-                📸 Screenshot: Command Prompt di PC1 con il comando ping digitato
+                <img src = "ScreenshotP7.png">
             </div>
         </div>
 
