--- a/tutorial_packet_tracer.html
+++ b/tutorial_packet_tracer.html
@@ -513,7 +513,7 @@ ping 192.168.0.20
             </div>
             
             <div class="screenshot-placeholder">
-                📸 Screenshot: Event List con la sequenza di pacchetti ARP e ICMP visibili
+                <img src = "ScreenshotP8.png">
             </div>
         </div>
 
