--- a/tutorial_packet_tracer.html
+++ b/tutorial_packet_tracer.html
@@ -538,7 +538,7 @@ ping 192.168.0.20
             </ol>
             
             <div class="screenshot-placeholder">
-                📸 Screenshot: Finestra PDU Information aperta con i layer del modello OSI visibili
+                <img src = "ScreenshotP9.png">
             </div>
         </div>
 
