--- a/tutorial_packet_tracer.html
+++ b/tutorial_packet_tracer.html
@@ -665,7 +665,7 @@ DATA: abcdefghijklmnopqrstuvwxyz
             </div>
             
             <div class="screenshot-placeholder">
-                📸 Screenshot: PDU Information di un pacchetto ARP Request
+                <img src = "ScreenshotP11.png">
             </div>
         </div>
 
