--- a/tutorial_packet_tracer.html
+++ b/tutorial_packet_tracer.html
@@ -723,7 +723,7 @@ Ping statistics for 192.168.0.20:
             </div>
             
             <div class="screenshot-placeholder">
-                📸 Screenshot: Command Prompt con output del ping completato con successo
+                <img src = "ScreenshotP13.png">
             </div>
         </div>
 
